# cognax

./: .gitignore  README.md  pyproject.toml
cognax/: __init__.py  df_util.py  evolution.py  outliers.py  util.py
cognax/decisions/: __init__.py  decisions.py  discrete_choice_rt.py  trdm.py  wfpt.py
cognax/experimental/: viz.py
cognax/joint/: __init__.py  gaussian_copula.py  joint.py
cognax/joint_modeling/: __init__.py  collection.py  gaussian_copula.py  util.py
examples/: fit_trdm.ipynb  fit_wfpt.ipynb
test/: test_constraints.py  test_distributions.py  test_dists.py  test_transforms.py
